<resources>
    <string name="app_name">cs380 Blackjack</string>
    <string name="blackjack">Blackjack</string>
    <string name="start_game">Start Game</string>
    <string name="help_button">Rules</string>
    <string name="welcome_popup">Welcome to BlackJack</string>
    <!--         -->
    <!-- Actions -->
    <!--         -->
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="surrender">Surrender</string>
    <string name="double_down">Double Down</string>
    <string name="split">Split</string>
    <string name="quit">Return to Main Menu</string>
    <string name="profile_page">Profile Menu</string>
    <string name="betting_balance">Betting Balance</string>
    <string name="name_john">Name(John)</string>
    <string name="number_of_bot_players">###</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="blackjack_guide">
       Blackjack is a game that consists of a dealer and one to multiple players.\nThe rules are as followed, the dealer and the players are competing with one another to reach
       a card count of 21 or as close to 21 as possible. The first to do so wins, however if a player goes over 21,
       the dealer wins, if the dealer goes over 21, the player wins. This is referred to as a bust mechanic.\nBelow is a list of the variety of mechanics in blackjack.\n \n
    </string>
    <string name="blackjack_commands">
        Bust : when a player or dealer goes over the card count of 21.\n\nStand: keep current hand for the round.\n\nHit: Ask for another card.\n\nSurrender: Half the bet is returned and the player folds his hand of cards.\n\nDouble Down: Can only be accessed after the first two initial cards are dealt.
                    Double your bet and receive one more card, can no longer hit. \n\n
    </string>

</resources>