<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:id="@+id/pop_up"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        >

        <TextView
            android:id="@+id/guide_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_popup"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/Opening_dialogue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjack_guide"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp"/>

        <TextView
            android:id="@+id/command"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackjack_commands"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>

    </LinearLayout>

</ScrollView>