<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/greentable"
        android:id="@+id/Main_Menu_Page">



    <TextView
            android:text="@string/blackjack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.022"
            android:textSize="38sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-medium" />

    <Button
        android:id="@+id/Play_BJ"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/blackjack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.308" />

    <Button
        android:id="@+id/Profile_Page"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/help_button"
        android:text="@string/help_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/background_color"
        />

    <ImageButton
        android:id="@+id/Play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/muted"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="664dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="Play" />

    <ImageButton
        android:id="@+id/MuteMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/notmuted"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="664dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="Mute" />


</androidx.constraintlayout.widget.ConstraintLayout>